<resources>
    <string name="app_name">Baxt</string>
    <string name="uzbek">O\'zbekcha</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="karakalpak">Karakalpak</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="connection_error">Connection error</string>
    <string name="required">Required</string>
    <string name="error">Error</string>
    <string name="welcome">Welcome</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="forget_password">Forget password</string>
    <string name="full_name">Full name</string>
    <string name="password_length">Password must be 6 or more characters</string>
    <string name="balance">Balance</string>
    <string name="settings">Settings</string>
    <string name="saved">Saved</string>
    <string name="basket">Basket</string>
    <string name="choose_lang">Choose langauge</string>
    <string name="icon">Icon</string>
    <string name="next">Next</string>
    <string name="please_select_language">Please, intially select language.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>