<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            />
        <item android:id="@+id/nav_basket"
            android:title="@string/basket"
            android:icon="@drawable/ic_basket"
            />
        <item android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/ic_search"
            />
        <item android:id="@+id/nav_saved"
            android:title="@string/saved"
            android:icon="@drawable/ic_liked"
            />
        <item android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"
            />
    </group>
</menu>