<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusableInTouchMode="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/green_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="@dimen/_22"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:layout_constraintVertical_bias="0.25"
            tools:ignore="SpUsage" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16"
            android:layout_marginTop="@dimen/_16"
            android:background="@drawable/bg_not_selected"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:padding="@dimen/_16"
            android:textSize="@dimen/_16"
            android:maxLength="16"

            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16"
            android:layout_marginTop="@dimen/_16"
            android:background="@drawable/bg_not_selected"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_16"
            android:textSize="@dimen/_16"
            app:layout_constraintTop_toBottomOf="@id/et_phone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16"
            android:background="@drawable/bg_green"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16"
            android:background="@drawable/bg_selected"
            android:text="@string/sign_up"
            android:textColor="@color/green"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24"
            android:layout_marginEnd="@dimen/_8"
            android:text="@string/privacy_policy"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@id/lineHalf"
            app:layout_constraintStart_toStartOf="@id/btn_registration"
            app:layout_constraintTop_toBottomOf="@id/btn_registration" />

        <TextView
            android:id="@+id/tv_password_forget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8"
            android:text="@string/forget_password"
            android:textAlignment="textEnd"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="@id/btn_registration"
            app:layout_constraintStart_toEndOf="@id/lineHalf"
            app:layout_constraintTop_toTopOf="@id/tv_privacy_policy" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lineHalf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>