<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/action_bar"
            layout="@layout/action_bar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/green_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_bar"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16"
            android:layout_marginTop="@dimen/_16"
            android:background="@drawable/bg_not_selected"
            android:hint="@string/full_name"
            android:padding="@dimen/_16"
            android:textSize="@dimen/_16"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:layout_constraintVertical_bias="0.25"
            tools:ignore="SpUsage" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16"
            android:layout_marginTop="@dimen/_16"
            android:background="@drawable/bg_not_selected"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:padding="@dimen/_16"
            android:textSize="@dimen/_16"
            android:maxLines="1"
            android:digits="0123456789"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            tools:ignore="SpUsage"
            android:maxLength="16"/>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16"
            android:layout_marginTop="@dimen/_16"
            android:background="@drawable/bg_not_selected"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_16"
            android:textSize="@dimen/_16"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/et_phone"
            tools:ignore="SpUsage" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16"
            android:background="@drawable/bg_green"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>